--- a/StudentApp/package.json
+++ b/StudentApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studentcareapp",
+  "name": "studentapp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,9 @@
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-dom": "^18.3.1",
+    "react-native": "0.76.5",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
