--- a/StudentApp/package.json
+++ b/StudentApp/package.json
@@ -9,11 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.5",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13"
   },
   "devDependencies": {
