--- a/StudentApp/package.json
+++ b/StudentApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.23",
