--- a/StudentApp/package.json
+++ b/StudentApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.23",
@@ -20,6 +21,7 @@
     "react-native": "^0.76.5",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^5.0.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13"
   },
